12月8日，完善了读文件存图的整体代码。

--- a/config.properties
+++ b/config.properties
@@ -1,8 +1,8 @@
 # author_net
-filePath1 = C:\\Users\\21333\\Desktop\\mywork\\Java_work\\src\\com\\github\\ryan6073\\Seriously\\author_net.txt
+filePath1 = D:\\GitCode\\Seriously\\author_net.txt
 
 # SuPZ_JCR_JournalResults_10_2023
-filePath2 = C:\\Users\\21333\\Desktop\\mywork\\Java_work\\src\\com\\github\\ryan6073\\Seriously\\SuPZ_JCR_JournalResults_10_2023.csv
+filePath2 = D:\\GitCode\\Seriously\\SuPZ_JCR_JournalResults_10_2023.csv
 
 
 # ???
