--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,16 @@
 # author_net
 #filePath1 = D:\\GitCode\\Seriously\\author_net.txt
-
 # SuPZ_JCR_JournalResults_10_2023
 #filePath2 = D:\\GitCode\\Seriously\\SuPZ_JCR_JournalResults_10_2023.csv
+# neo4j username
+name = neo4j
+# neo4j password
+psw = 123456
 
+## zqf
+# filePath1 = C:\\Users\\86166\\Desktop\\author_net.txt
+# filePath2 = C:\\Users\\21333\\Desktop\\mywork\\Java_work\\src\\com\\github\\ryan6073\\Seriously\\SuPZ_JCR_JournalResults_10_2023.csv
 
-# zqf
- filePath1 = C:\\Users\\86166\\Desktop\\author_net.txt
- filePath2 = C:\\Users\\21333\\Desktop\\mywork\\Java_work\\src\\com\\github\\ryan6073\\Seriously\\SuPZ_JCR_JournalResults_10_2023.csv
+# zjs
+filePath1 = C:\\Users\\86166\\Desktop\\author_net.txt
+filePath2 = C:\\Users\\86166\\Desktop\\SuPZ_JCR_JournalResults_10_2023.csv
