--- a/config.properties
+++ b/config.properties
@@ -2,15 +2,20 @@
 #filePath1 = D:\\GitCode\\Seriously\\author_net.txt
 # SuPZ_JCR_JournalResults_10_2023
 #filePath2 = D:\\GitCode\\Seriously\\SuPZ_JCR_JournalResults_10_2023.csv
+
 # neo4j username
 name = neo4j
 # neo4j password
-psw = 123456
+psw = 1975LIliabili
+
+## xjy
+filePath1 = C:\\Users\\21693\\Desktop\\mywork\\Seriously11.21\\author_net.txt
+filePath2 = C:\\Users\\21693\\Desktop\\mywork\\Seriously11.21\\SuPZ_JCR_JournalResults_10_2023.csv
 
 ## zqf
 # filePath1 = C:\\Users\\86166\\Desktop\\author_net.txt
 # filePath2 = C:\\Users\\21333\\Desktop\\mywork\\Java_work\\src\\com\\github\\ryan6073\\Seriously\\SuPZ_JCR_JournalResults_10_2023.csv
 
 # zjs
-filePath1 = C:\\Users\\86166\\Desktop\\author_net.txt
-filePath2 = C:\\Users\\86166\\Desktop\\SuPZ_JCR_JournalResults_10_2023.csv
+#filePath1 = C:\\Users\\86166\\Desktop\\author_net.txt
+#filePath2 = C:\\Users\\86166\\Desktop\\SuPZ_JCR_JournalResults_10_2023.csv
