--- a/config.properties
+++ b/config.properties
@@ -1,8 +1,3 @@
-# author_net
-#filePath1 = D:\\GitCode\\Seriously\\author_net.txt
-# SuPZ_JCR_JournalResults_10_2023
-#filePath2 = D:\\GitCode\\Seriously\\SuPZ_JCR_JournalResults_10_2023.csv
-
 # neo4j username
 name = neo4j
 # neo4j password
@@ -19,3 +14,7 @@ filePath2 = C:\\Users\\21693\\Desktop\\mywork\\Seriously11.21\\SuPZ_JCR_JournalR
 # zjs
 #filePath1 = C:\\Users\\86166\\Desktop\\author_net.txt
 #filePath2 = C:\\Users\\86166\\Desktop\\SuPZ_JCR_JournalResults_10_2023.csv
+
+# spz
+#filePath1 = D:\\GitCode\\Seriously\\author_net.txt
+#filePath2 = D:\\GitCode\\Seriously\\SuPZ_JCR_JournalResults_10_2023.csv
