1月13日版本，完善配置文件格式

--- a/config.properties
+++ b/config.properties
@@ -1,19 +1,20 @@
-# neo4j username
-name = neo4j
-# neo4j password
-psw = 1975LIliabili
 
-## xjy
-filePath1 = C:\\Users\\21693\\Desktop\\mywork\\Seriously11.21\\author_net.txt
-filePath2 = C:\\Users\\21693\\Desktop\\mywork\\Seriously11.21\\SuPZ_JCR_JournalResults_10_2023.csv
+
+### xjy
+#filePath1 = C:\\Users\\21693\\Desktop\\mywork\\Seriously11.21\\author_net.txt
+#filePath2 = C:\\Users\\21693\\Desktop\\mywork\\Seriously11.21\\SuPZ_JCR_JournalResults_10_2023.csv
+#name = neo4j
+#psw = 1975LIliabili
 
 ## zqf
 # filePath1 = C:\\Users\\86166\\Desktop\\author_net.txt
 # filePath2 = C:\\Users\\21333\\Desktop\\mywork\\Java_work\\src\\com\\github\\ryan6073\\Seriously\\SuPZ_JCR_JournalResults_10_2023.csv
 
-# zjs
-#filePath1 = C:\\Users\\86166\\Desktop\\author_net.txt
-#filePath2 = C:\\Users\\86166\\Desktop\\SuPZ_JCR_JournalResults_10_2023.csv
+## zjs
+#filePath1 = C:\\Users\\21333\\Desktop\\author_net_test.txt
+#filePath2 = C:\\Users\\21333\\Desktop\\SuPZ_JCR_JournalResults_10_2023.csv
+#name = neo4j
+#psw = neo4j
 
 # spz
 #filePath1 = D:\\GitCode\\Seriously\\author_net.txt
