提交自动化测试统一相关修改文件

--- a/config.properties
+++ b/config.properties
@@ -10,11 +10,11 @@
 # filePath1 = C:\\Users\\86166\\Desktop\\author_net.txt
 # filePath2 = C:\\Users\\21333\\Desktop\\mywork\\Java_work\\src\\com\\github\\ryan6073\\Seriously\\SuPZ_JCR_JournalResults_10_2023.csv
 
-## zjs
-#filePath1 = C:\\Users\\21333\\Desktop\\author_net_test.txt
-#filePath2 = C:\\Users\\21333\\Desktop\\SuPZ_JCR_JournalResults_10_2023.csv
-#name = neo4j
-#psw = neo4j
+# zjs
+filePath1 = C:\\Users\\21333\\Desktop\\author_net_test.txt
+filePath2 = C:\\Users\\21333\\Desktop\\SuPZ_JCR_JournalResults_10_2023.csv
+name = neo4j
+psw = zjs20030710
 
 # spz
 #filePath1 = D:\\GitCode\\Seriously\\author_net.txt
